# Telegram-Task-Bot

./: .replit  pnpm-lock.yaml  pyproject.toml  replit.md  start-production.sh
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/src/: app.ts  index.ts
artifacts/api-server/src/routes/: health.ts  index.ts  kanban.ts  telegram.ts
artifacts/kanban/: index.html  package.json  vite.config.ts
artifacts/kanban/.replit-artifact/: artifact.toml
artifacts/kanban/src/: App.tsx  index.css
artifacts/kanban/src/components/: kanban-board.tsx  task-modal.tsx
artifacts/kanban/src/hooks/: use-kanban.ts
artifacts/kanban/src/lib/: supabase.ts  types.ts
attached_assets/: Pasted-Build-a-Telegram-task-management-bot-using-Python-Stack_1779093621943.txt  Pasted-Build-a-clean-and-modern-Kanban-backlog-web-application_1779105229927.txt  Pasted-Fix-webhook-production-architecture-properly-Do-not-sug_1779190374429.txt  Pasted-Improve-Telegram-task-bot-and-Kanban-user-isolation-Goa_1779170395953.txt
bot/: .env.example  README.md  config.py  database.py  keyboards.py  main.py  requirements.txt  states.py
bot/handlers/: commands.py  messages.py
bot/services/: ai_service.py  reminder_service.py  task_service.py
scripts/: build-production.sh
