[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==24.1.0",
    "aiogram==3.17.0",
    "aiohttp==3.11.18",
    "httpx==0.28.1",
    "openai==1.82.1",
    "pydub==0.25.1",
    "python-dotenv==1.1.0",
    "supabase==2.15.2",
]
